gfx/2d/DrawTargetD2D1.h
@@ -180,7 +180,9 @@ private:
   void MarkChanged();
   bool ShouldClipTemporarySurfaceDrawing(CompositionOp aOp, const Pattern& aPattern, bool aClipIsComplex);
   void PrepareForDrawing(CompositionOp aOp, const Pattern &aPattern);
-  void FinalizeDrawing(CompositionOp aOp, const Pattern &aPattern);
+  // aAffectedRect may be used to supply the bounds of the drawing operations in order to prevent
+  // excessive surface area being operated on
+  void FinalizeDrawing(CompositionOp aOp, const Pattern &aPattern, const Rect* aAffectedRect = nullptr);
   void FlushTransformToDC() {
     if (mTransformDirty) {
       mDC->SetTransform(D2DMatrix(mTransform));
@@ -190,7 +192,11 @@ private:
   void AddDependencyOnSource(SourceSurfaceD2D1* aSource);
 
   // Must be called with all clips popped and an identity matrix set.
-  already_AddRefed<ID2D1Image> GetImageForLayerContent(bool aShouldPreserveContent = true);
+  // aBounds can be specified to allow the function to return only part of the layer contents
+  // aOutOffset will return the offset that should be applied to move the ID2D1Image onto the
+  // correct portion of the destination layer. If !aBounds this will always be 0,0 and can be
+  // ignored.
+  already_AddRefed<ID2D1Image> GetImageForLayerContent(bool aShouldPreserveContent = true, const Rect* aBounds = nullptr, Point* aOutOffset = nullptr);
 
   ID2D1Image* CurrentTarget()
   {
